Connecting front-end sign-up page to back-end server

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Readex+Pro:wght@200;300;400;500;600;700&display=swap");
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-    text-align: center;
+  text-align: center;
 }
 
 * {
-  font-family: 'Readex Pro', sans-serif;
+  font-family: "Readex Pro", sans-serif;
 }
 
 h2 {
@@ -59,7 +60,7 @@ h2 {
   border: 2px solid rgb(11, 23, 96);
   color: rgb(255, 255, 255);
   background: linear-gradient(45deg, rgb(11, 23, 96), rgb(41, 149, 63));
-} 
+}
 
 .secondary-button:active {
   color: rgb(255, 255, 255);
@@ -104,10 +105,11 @@ nav .nav-button:disabled {
   height: 100vh;
   position: fixed;
   background: linear-gradient(
-    to bottom,
-    rgba(98, 96, 96, 0.35) 0%,
-    rgba(11, 11, 11, 0.9) 100%
-  ), url("./images/pexel7.jpg");
+      to bottom,
+      rgba(98, 96, 96, 0.35) 0%,
+      rgba(11, 11, 11, 0.9) 100%
+    ),
+    url("./images/pexel7.jpg");
 
   background-repeat: no-repeat, no-repeat;
   background-size: cover;
@@ -121,7 +123,7 @@ nav .nav-button:disabled {
   top: 40px;
   left: 0;
   right: 0;
-  
+
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
@@ -143,9 +145,9 @@ nav .nav-button:disabled {
   flex-direction: column;
 }
 
-.auth-modal input[type=email],
-.auth-modal input[type=password],
-.auth-modal input[type=password-check] {
+.auth-modal input[type="email"],
+.auth-modal input[type="password"],
+.auth-modal input[type="password-check"] {
   border: 2px solid #eee;
   padding: 10px;
   margin: 10px;
@@ -154,7 +156,7 @@ nav .nav-button:disabled {
 
 .auth-modal form .error {
   color: rgb(188, 2, 2);
-  font-weight:900;
+  font-weight: 900;
 }
 
 /* Onboarding */
@@ -192,7 +194,7 @@ nav .nav-button:disabled {
   border-radius: 10px;
   padding: 15px 30px;
   margin: 10px 0;
-} 
+}
 
 .onboarding form .input-container {
   display: flex;
@@ -205,43 +207,43 @@ nav .nav-button:disabled {
   transition: all 0.3s;
   padding: 10px;
   margin-right: 10px;
-} 
+}
 
 .onboarding form .input-container input {
   margin-right: 10px;
 }
 
-.onboarding form input[type=date] {
+.onboarding form input[type="date"] {
   width: 20%;
   justify-content: center;
 }
 
-.onboarding form input[type=radio] {
+.onboarding form input[type="radio"] {
   display: none;
 }
 
-.onboarding form input[type=radio]:checked + label {
+.onboarding form input[type="radio"]:checked + label {
   border: 2px solid #111;
   border-radius: 10px;
   color: white;
   background: #111;
 }
 
-.onboarding form input[type=submit] {
+.onboarding form input[type="submit"] {
   text-transform: uppercase;
   background: rgb(8, 6, 6);
   color: rgb(255, 255, 255);
   border: none;
 }
 
-.onboarding form input[type=submit]:hover {
+.onboarding form input[type="submit"]:hover {
   color: rgb(255, 255, 255);
   background: linear-gradient(45deg, rgb(11, 23, 96), rgb(41, 149, 63));
 }
 
-.onboarding form input[type=submit]:active {
+.onboarding form input[type="submit"]:active {
   color: rgb(255, 255, 255);
-  background: linear-gradient(260deg,  rgb(11, 23, 96), rgb(41, 149, 63));
+  background: linear-gradient(260deg, rgb(11, 23, 96), rgb(41, 149, 63));
 }
 
 .onboarding form .photo-container img {
@@ -252,7 +254,7 @@ nav .nav-button:disabled {
 
 .dashboard {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
 .dashboard .swipe-container {
@@ -261,12 +263,12 @@ nav .nav-button:disabled {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
 .dashboard .card-container {
   width: 400px;
-  height: 650px; 
+  height: 650px;
   background: white;
 }
 
@@ -274,7 +276,7 @@ nav .nav-button:disabled {
   position: absolute;
   top: 10%;
   right: 20%;
-} 
+}
 
 .card {
   width: 400px;
@@ -285,7 +287,7 @@ nav .nav-button:disabled {
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-} 
+}
 
 .card-info {
   position: absolute;
@@ -313,7 +315,7 @@ nav .nav-button:disabled {
   margin: 5px 5px 30px;
 }
 
-.infoText {  
+.infoText {
   width: 100%;
   height: 28px;
   justify-content: center;
@@ -334,7 +336,7 @@ nav .nav-button:disabled {
 .chat-container {
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-  rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .chat-container .chat-container-header {
